# duty_schedule_c

./: .gitignore  CMakeLists.txt  README.md  build.sh  run.sh
src/: duty_manager.cpp  duty_manager.h  main.cpp
web/: app.js  index.html  style.css
